[package]
name = "tutor-db"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "iter1"

[[bin]]
name = "iter2"

[[bin]]
name = "iter3"

[dependencies]
# Actix web framework and runtime
actix-web = "^3.3"
actix-rt = "1.1.1"
# Environment variable access libraries
dotenv = "0.15.0"
# Postgres access library
sqlx = { version = "0.3.5", default_features = false, features = ["postgres", "runtime-tokio", "macros", "chrono"] }
# Data serialization library
serde = { version = "1.0.110", features = ["derive"]}
# Other utils
chrono = { version = "0.4.11", features = ["serde"]}
# Openssl for build
openssl = { version = "0.10", features = ["vendored"] }